[squash] hero container now displays correctly on smaller devices
removed background svg and the mockup mobile image which will be placed at the top level of the app.

--- a/src/app/components/organisms/hero-section/heroSection.module.css
+++ b/src/app/components/organisms/hero-section/heroSection.module.css
@@ -4,7 +4,7 @@
     height: 660px;
 
     background-color: hsl(0, 0%, 98%);
-    background-image: url('../../../../../public/images/bg-intro-desktop.svg');
+    background-image: url('/images/bg-intro-desktop.svg');
     background-repeat: no-repeat;
     background-position-x: 655px;
     background-position-y: -264px;
@@ -34,10 +34,7 @@
     width: 50%;
 
     z-index: 2;
-}
-
-.rightHeroContainer {
-    overflow-x: clip;
+    overflow: hidden;
 }
 
 .leftHeroContainer {
@@ -48,6 +45,9 @@
     position: relative;
     top: -127.5px;
     right: -120px;
+    max-width: calc(100% + 120px);
+    width: auto;
+    height: auto;
 }
 
 .lfhSubject {
@@ -62,4 +62,4 @@
 .lfhSubItem {
     margin: auto 15px;
     padding-left: 5px;
-}
+} 
