--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,6 +70,11 @@
   --destructive-foreground: hsl(0 0% 98%);
 }
 
+@theme{
+  --breakpoint-mobile: 23.438rem;
+  --breakpoint-desktop: 90rem;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
